// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.config.access;

option java_package = "org.wfanet.measurement.config.access";
option java_multiple_files = true;
option java_outer_classname = "PermissionsConfigProto";

message PermissionsConfig {
  message Permission {
    // Types of protected resources which this Permission is applicable to.
    //
    // The type comes from the `google.api.ResourceDescriptor` of the resource.
    // Note that in the case that the permission can be granted on the parent
    // type for all children, this may not be the type mentioned in the
    // Permission resource ID. For example, permission `books.read` may apply to
    // resource type `example.com/Shelf` to grant reading all books on the
    // shelf.
    repeated string protected_resource_types = 1;
  }

  // Map of permission resource ID to `Permission`.
  //
  // The resource ID is typically in lower camel case, and often consists of the
  // plural resource type followed by an operation. For example,
  // `chapterHeadings.list`.
  map<string, Permission> permissions = 1;
}
